--- a/DragomirAngelov/Exercise17-10-2017.md
+++ b/DragomirAngelov/Exercise17-10-2017.md
@@ -3,7 +3,7 @@ This [video](https://youtu.be/GwzxjBAhy_4?list=PLNKd01MEkVeKf74MdK5cUzgQKiiTyark
 shows how to work with data structures in Eclipse Dirigible. It demonstrates how to create a database table and gives an example. Its target viewers are new dirigible users who are competent and qualified, know what they want to do but don't know how to do it, using Eclipse Dirigible.
 
 
-### How to work with data structures in Eclipse Dirigible.
+## How to work with data structures in Eclipse Dirigible.
 
 1. Open **Eclipse Dirigible.**
 2. In the **Workspace Explorer**, right-click and choose **New -> Project**.
@@ -12,16 +12,16 @@ shows how to work with data structures in Eclipse Dirigible. It demonstrates how
 
 	_Here you can create **tables**, **views** and **add sample data**._
 
-	#### To create a new table:
+	### To create a new table:
 	Select for template - **Relational Database Table** and start creating your table. When you are finished enter a **Name** for the file and click **Finish**.
 
-	#### To add sample data in the table:
+	### To add sample data in the table:
 	Select for a template - **Delimiter Separated Values Sample data**. In the list that appears, click on the table you created and in the file that is created write the sample data.
     
-    #### To write SQL queries:
+	### To write SQL queries:
     Go to **other...** located on the top of the screen. There you can open a **Database Perspective**. Once you clicked on it a SQL console will appear on in the bottom of the window and you can start writing your SQL queries. To execute a query click **>>Query**.
     
-    #### To Publish your project:
+	### To Publish your project:
     Once you are ready and want to pubosh your changes, right-click on the **Project Name** and click publish.
 
 
