Update and rename DragomirAngelov/Exercise17-10-2017.md to DragomirAngelov/Exercise/Exercise_2017-10-17.md

--- a/DragomirAngelov/Exercise/Exercise_2017-10-17.md
+++ b/DragomirAngelov/Exercise/Exercise_2017-10-17.md
@@ -17,12 +17,12 @@ shows how to work with data structures in Eclipse Dirigible. It demonstrates how
 
 	### To add sample data in the table:
 	Select for a template - **Delimiter Separated Values Sample data**. In the list that appears, click on the table you created and in the file that is created write the sample data.
-    
+
 	### To write SQL queries:
     Go to **other...** located on the top of the screen. There you can open a **Database Perspective**. Once you clicked on it a SQL console will appear on in the bottom of the window and you can start writing your SQL queries. To execute a query click **>>Query**.
-    
+
 	### To Publish your project:
-    Once you are ready and want to pubosh your changes, right-click on the **Project Name** and click publish.
+    Once you are ready and want to publish your changes, right-click on the **Project Name** and click publish.
 
 
 ### What is Cloud computing
