--- a/DragomirAngelov/Exercise/Exercise_2017-10-24.md
+++ b/DragomirAngelov/Exercise/Exercise_2017-10-24.md
@@ -4,17 +4,17 @@ This [video](https://www.youtube.com/watch?v=D6XEs5Zlav4&feature=youtu.be) shows
 
 1.	Open **Eclipse Dirigible**.
 2.	In the **Workspace Explorer**, where your project is, expand the **ScriptingServices tab**, find the entity file you want to create a user interface of. Right-click on it and choose **Generate -> User Interface for Entity Service**.
-![alt text](https://github.com/dirigiblelabs/curriculum/blob/master/DragomirAngelov/images/1.png "First")
+![image1](https://github.com/dirigiblelabs/curriculum/blob/master/DragomirAngelov/Exercise/Images/1.png "First")
 3.	An additional window will appear. Select from the available templates **List Entities** and click **Next**.
 4.	Select the columns you want or you can use the **Select All** button to choose all.
 5.	On the next page enter a **File name**, click **Next** and then enter a **Page Title**. Once you are ready click **Finish** and a file will be generated. You can see the result under the **WebContent** folder.
-![image](https://github.com/dirigiblelabs/curriculum/blob/master/DragomirAngelov/images/2.png "Second")
+![image2](https://github.com/dirigiblelabs/curriculum/blob/master/DragomirAngelov/Exercise/Images/2.png "Second")
 6.	Right-click on the **WebContent** folder and choose **New -> User Interface**.
 7.	In the additional window that appears select **Index Page with Main Menu, Header and Footer**. 
 8.	Click **Next** and choose a **File name**. We recommend you stick with the default name index.html. When you are ready click **Next** again enter a **Page Title** and click **Finish**.
 9.	Additional files will be generated in the **WebContent folder**. 
 10.	Click on the main.menu file. Your file should look something like this:
-![image](https://github.com/dirigiblelabs/curriculum/blob/master/DragomirAngelov/images/3.png "Third")
+![image3](https://github.com/dirigiblelabs/curriculum/blob/master/DragomirAngelov/Exercise/Images/3.png "Third")
 	
 	Where “name” and “link” should be replaced with yours.
 11.	**Save** your files.
@@ -22,4 +22,4 @@ This [video](https://www.youtube.com/watch?v=D6XEs5Zlav4&feature=youtu.be) shows
     #### If you want to preview your User Interface
 	Click on the index.html file and in the Preview section, copy the generated link and paste it in your browser.
 
-![image](https://github.com/dirigiblelabs/curriculum/blob/master/DragomirAngelov/images/4.png "Fourth")
+![image4](https://github.com/dirigiblelabs/curriculum/blob/master/DragomirAngelov/Exercise/Images/4.png "Fourth")
