--- a/GorinTopalov/2.ScriptingServices.md
+++ b/GorinTopalov/2.ScriptingServices.md
@@ -25,4 +25,5 @@ After completing the steps you should have your Scripting Service under the **Sc
 
 ## Next
 
+[3.Launchpad Templates](3.Launchpad%20Templates.md)
 
