Update and rename 1.DataStructures.md to 2.DataStructures.md

--- a/BranimirKirilov/Documentation/DirigibleBasics/2.DataStructures.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/2.DataStructures.md
@@ -2,20 +2,10 @@
 
 The following steps describe the process of creating a data structure.
 
+## Prerequisites
+To achieve the results of this step you should already have a project created 
+
 ## Steps 
-
-#### I. Creating a project if you don't have one
-> Don't follow this step if you have already created a project
-
-1. Open the **Workspace Explorer**
-2. Right-click on the blank space
-3. Navigate to **New > Project**
-4. Enter a project name
-5. Click **next**
-6. Select **Blank application** and click **Finish**
-
-#### II. Creating a data structure
-> To achieve the results of this step you should already have a project created 
 
 1. Right click on your project
 2. Navigate to **New > Data Structure**. A pop-up appears.
@@ -33,8 +23,8 @@ The following steps describe the process of creating a data structure.
 
 After you create your data structure it will live in the **Data Strucures** directory of your project. From now on, you can write queries to your data stucture. 
 
-> E.g: If you have an SQL database, navigate to **Other > Database Perspective** and type your query in the newly opened **SQL Console**
+    E.g: If you have an SQL database, navigate to **Other > Database Perspective** and type your query in the newly opened **SQL Console**
 
 ## Next
 
-[2.Creating a Scripting Service](2.ScriptingServices.md)
+[3.Creating a Scripting Service](3.ScriptingServices.md)
