--- a/BranimirKirilov/Documentation/DirigibleBasics/2.DataStructures.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/2.DataStructures.md
@@ -24,6 +24,10 @@ To achieve the results of this step you should already have a project created
 After you create your data structure it will live in the **Data Strucures** directory of your project. From now on, you can write queries to your data stucture. 
 
     E.g: If you have an SQL database, navigate to **Other > Database Perspective** and type your query in the newly opened **SQL Console**
+    
+## Previous
+
+[1.Creating a project](1.CreatingProjects.md)
 
 ## Next
 
