--- a/BranimirKirilov/Documentation/DirigibleBasics/3.ScriptingServices.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/3.ScriptingServices.md
@@ -4,7 +4,7 @@ The following steps describe the process of creating a data structure.
 
 ## Prerequisites
 
-> You must have a _project_ created and at least one _Data Structure_. Follow [this tutorial](1.DataStructures.md) to understand how to do this.
+You must have a _project_ created and at least one _Data Structure_. Follow [this tutorial](1.DataStructures.md) to understand how to do this.
 
 ## Steps
 
