--- a/BranimirKirilov/Documentation/DirigibleBasics/4.UserInterfaces.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/4.UserInterfaces.md
@@ -1,19 +1,19 @@
 # Creating a user interface
 
-The following steps describe the process of adding a user interface to your project
+The following steps describe the process of adding a user interface to your project.
 
 ## Prerequisites
 
-> You must have a _project_ created and a Scripting Service. Follow [this tutorial](1.DataStructures.md) to understand how to do create a project and [this one](2.ScriptingService.md) to understand how to create a Scripting Service.
+You must have a _project_ created and a Scripting Service. Follow [this tutorial](1.DataStructures.md) to understand how to do create a project and [this one](2.ScriptingService.md) to understand how to create a Scripting Service.
 
 ## Steps
 
-1. Open the **Workspace Explorer** and navigate to the desired _entity_ file
-2. Right-click on the file and navigate to **Generate > User Interface for entity service**
-3. A **pop up** appears. Select the desired template
-4. Select the data fields you need and click **Next**
-5. Choose a name for your _html file_
-6. Input the page title and click **Finish**
+1. Open the **Workspace Explorer** and navigate to the desired _entity_ file.
+2. Right-click on the file and navigate to **Generate > User Interface for entity service**.
+3. A **pop up** appears. Select the desired template.
+4. Select the data fields you need and click **Next**.
+5. Choose a name for your _html file_.
+6. Input the page title and click **Finish**.
 
 ## Results 
 
