--- a/BranimirKirilov/Documentation/DirigibleBasics/5.ManageEntityTemplate.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/5.ManageEntityTemplate.md
@@ -4,7 +4,7 @@ The following steps describe the process of managing an entity.
 
 ## Prerequisites
 
-You must have a _Project_, a _Data Structure_ and a _Scripting Service_. Follow [this tutorial](1.DataStructures.md) to understand how to do create a Project and a Data Structure and [this one](2.ScriptingService.md) to understand how to create a Scripting Service.
+You must have a _Project_, a _Data Structure_ and a _Scripting Service_ created. Follow [this tutorial](1.CreatingProjects.md) to understand how to do create a project, [this tutorial](2.DataStructures.md)  and a Data Structure and [this one](3.ScriptingService.md) to understand how to create a Scripting Service.
 
 ## Steps
 
