--- a/BranimirKirilov/Documentation/DirigibleBasics/4.UserInterfaces.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/4.UserInterfaces.md
@@ -4,7 +4,7 @@ The following steps describe the process of adding a user interface to your proj
 
 ## Prerequisites
 
-You must have a _project_ created and a Scripting Service. Follow [this tutorial](1.DataStructures.md) to understand how to do create a project and [this one](2.ScriptingService.md) to understand how to create a Scripting Service.
+You must have a _project_ created and a _scripting service_. Follow [this tutorial](1.CreatingProjects.md) to understand how to do create a project and [this one](3.ScriptingService.md) to understand how to create a Scripting Service.
 
 ## Steps
 
