--- a/BranimirKirilov/Documentation/DirigibleBasics/3.ScriptingServices.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/3.ScriptingServices.md
@@ -8,16 +8,16 @@ You must have a _project_ created and at least one _Data Structure_. Follow [thi
 
 ## Steps
 
-1. Open the **Workspace Explorer**
-2. Right-click on your project
-3. Navigate to **New > Scripting service**
-4. Select the desired template and click **Next**
-5. From the list that appears select your table and click **Next**
-6. Input a name for your scripting service and press **Finish**
+1. Open the **Workspace Explorer**.
+2. Right-click on your project.
+3. Navigate to **New > Scripting service**.
+4. Select the desired template and click **Next**.
+5. From the list that appears select your table and click **Next**.
+6. Input a name for your scripting service and press **Finish**.
 
 ## Results
 
-After completing the steps you should have your Scripting Service under the **Scripting Service** directory of your project
+After completing the steps you should have your Scripting Service under the **Scripting Service** directory of your project.
 
 ## Previous
 
