--- a/BranimirKirilov/Documentation/DirigibleBasics/2.DataStructures.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/2.DataStructures.md
@@ -3,21 +3,18 @@
 The following steps describe the process of creating a data structure.
 
 ## Prerequisites
-To achieve the results of this step you should already have a project created 
+To achieve the results of this step you should already have a project created.
 
 ## Steps 
 
-1. Right click on your project
+1. Right click on your project.
 2. Navigate to **New > Data Structure**. A pop-up appears.
-3. Select the desired _template_ and click **Next**
-4. Click **Add** to add a new column
-5. Fill the fields to your situation and after you are done click **OK**
-6. When you are done adding columns, click **Next** at the bottom
+3. Select the desired _template_ and click **Next**.
+4. Click **Add** to add a new column.
+5. Fill the fields to your situation and after you are done click **OK**.
+6. When you are done adding columns, click **Next** at the bottom.
 7. Choose a name for your data structure. It must end with _.table_ to be working properly.
-
-#### III. Publishing the changes
-
-1. Right-click on your project and select **publish**
+8. Right-click on your project and select **publish**.
 
 ## Results
 
