--- a/BranimirKirilov/Documentation/DirigibleBasics/1.CreatingProjects.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/1.CreatingProjects.md
@@ -2,12 +2,12 @@
 
 ## Steps 
 
-1. Open the **Workspace Explorer**
-2. Right-click on the blank space
-3. Navigate to **New > Project**
-4. Enter a project name
-5. Click **next**
-6. Select **Blank application** and click **Finish**
+1. Open the **Workspace Explorer**.
+2. Right-click on the blank space.
+3. Navigate to **New > Project**.
+4. Enter a project name.
+5. Click **next**.
+6. Select **Blank application** and click **Finish**.
 
 ## Results
 
