--- a/BranimirKirilov/Documentation/DirigibleBasics/1.CreatingProjects.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/1.CreatingProjects.md
@@ -6,7 +6,7 @@
 2. Right-click on the blank space.
 3. Navigate to **New > Project**.
 4. Enter a project name.
-5. Click **next**.
+5. Click **Next**.
 6. Select **Blank application** and click **Finish**.
 
 ## Results
