--- a/BranimirKirilov/Documentation/DirigibleBasics/2.DataStructures.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/2.DataStructures.md
@@ -14,7 +14,7 @@ To achieve the results of this step you should already have a project created.
 5. Fill the fields to your situation and after you are done click **OK**.
 6. When you are done adding columns, click **Next** at the bottom.
 7. Choose a name for your data structure. It must end with _.table_ to be working properly.
-8. Right-click on your project and select **publish**.
+8. Right-click on your project and select **Publish**.
 
 ## Results
 
