--- a/BranimirKirilov/Documentation/DirigibleBasics/1.CreatingProjects.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/1.CreatingProjects.md
@@ -7,7 +7,7 @@
 3. Navigate to **New > Project**.
 4. Enter a project name.
 5. Click **Next**.
-6. Select **Blank application** and click **Finish**.
+6. Select **Blank Application** and click **Finish**.
 
 ## Results
 
