--- a/BranimirKirilov/Documentation/DirigibleBasics/3.ScriptingServices.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/3.ScriptingServices.md
@@ -1,4 +1,4 @@
-# Creating a scripting service 
+# Creating a Scripting Service 
 
 The following steps describe the process of creating a data structure.
 
