--- a/BranimirKirilov/Documentation/DirigibleBasics/4.UserInterfaces.md
+++ b/BranimirKirilov/Documentation/DirigibleBasics/4.UserInterfaces.md
@@ -1,4 +1,4 @@
-# Creating a user interface
+# Creating a User Interface
 
 The following steps describe the process of adding a user interface to your project.
 
