--- a/KameliaIvanova/2. Creating a New Project.md
+++ b/KameliaIvanova/2. Creating a New Project.md
@@ -15,4 +15,4 @@ Now you have a project in your workspace and you can add files to it.
 
 
 ### **Other Tutorials**
-[3. Encoding and Decoding URLs](3. Encoding and Decoding URLs.md)
+![3. Encoding and Decoding URLs](3. Encoding and Decoding URLs.md)
