--- a/GorinTopalov/3.Launchpad Templates.md
+++ b/GorinTopalov/3.Launchpad Templates.md
@@ -23,6 +23,8 @@
 * modify something
 6. Save changes and view them in **index.html**
 
+## Result
+Your launchpad template is created
 ## Previous
 
 [2.ScriptingServices](2.ScriptingServices.md)
