--- a/GorinTopalov/2.ScriptingServices.md
+++ b/GorinTopalov/2.ScriptingServices.md
@@ -14,8 +14,12 @@ The following steps describe the process of creating a data structure.
 
 ## Results
 
-After completing the steps you should have your Scripting Service under the **Scripting Service** directory of your project
-
+* `<Root>/Scripting Services/<Project name>/<Your service name>.js `
+* `<Root>/Scripting Services/<Project name>/<Your service name>.entity `
+* `<Root>/Scripting Services/<Project name>/<Your service name>.swagger `
+* `<Root>/Scripting Services/<Project name>/<Your service name>_lib.js `
+  
+  
 ## Previous
 
 [1.Eclipse Dirigible](1.Eclipse%20Dirigible.md)
