--- a/GorinTopalov/3.Launchpad Templates.md
+++ b/GorinTopalov/3.Launchpad Templates.md
@@ -25,6 +25,15 @@
 
 ## Result
 Your launchpad template is created
-## Previous
+## Eclipse Dirigible
 
-[2.ScriptingServices](2.ScriptingServices.md)
+[1.Eclipse Dirigible](1.Eclipse%20Dirigible.md)
+
+## Launchpad Templates
+
+[3.Launchpad Templates](3.Launchpad%20Templates.md)
+
+## Data Structure
+
+[4.Data Structure](4.Data%20Structure.md)
+
