--- a/GorinTopalov/2.ScriptingServices.md
+++ b/GorinTopalov/2.ScriptingServices.md
@@ -20,11 +20,14 @@ The following steps describe the process of creating a data structure.
 * `<Root>/Scripting Services/<Project name>/<Your service name>_lib.js `
   
   
-## Previous
+## Eclipse Dirigible
 
 [1.Eclipse Dirigible](1.Eclipse%20Dirigible.md)
 
-## Next
+## Launchpad Templates
 
 [3.Launchpad Templates](3.Launchpad%20Templates.md)
 
+## Data Structure
+
+[4.Data Structure](4.Data%20Structure.md)
