Rename, add links to other pages

--- a/DenisDuev/2.ScriptingService.md
+++ b/DenisDuev/2.ScriptingService.md
@@ -1,5 +1,8 @@
-# Create a Scripting Service of your project in Eclipse Dirigible
+# Create a Scripting Service of Your Project in Eclipse Dirigible
 
+## Explanation
+
+If you develop an application at some point you will face Data Structures. You can create them in you Eclipse Dirigible project and they will help you to manage your data is a simple way.
 Follow the steps to learn how to create a Scripting Service of your project in Eclipse Dirigible.
 
 ## Prerequisites
@@ -7,7 +10,7 @@ Follow the steps to learn how to create a Scripting Service of your project in E
 Have eclipse dirigible project.
 
 ## Steps
-1. Open Dirigible Web IDE
+1. Open **Eclipse Dirigible Web IDE**.
 2. Navigate to the **Workspace Explorer** view and find you project.
 3. Right-click on your project folder.
 4. Select **New** > **Scripting service**.
@@ -29,3 +32,11 @@ In your project folder you can find .entity file which holds the metadata for th
 </p>
 
 <br>
+
+#### Next:
+### [5. Create Documentation](5.Documentation.md)
+
+<br>
+
+#### See also:
+### [1. Data Structures](1.DataStructures.md)
