Fix links in DataStructures.md

--- a/DenisDuev/1.DataStructures.md
+++ b/DenisDuev/1.DataStructures.md
@@ -40,7 +40,7 @@ Your data is grouped in data structures and can be procesed with SQL statement.
 <br>
 
 #### Next:
-### [1. Scripting Service](2.ScriptingService.md.md)
+### [1. Scripting Service](2.ScriptingService.md)
 
 <br>
 
