Fix links in 5.Documentation.md

--- a/DenisDuev/5.Documentation.md
+++ b/DenisDuev/5.Documentation.md
@@ -25,5 +25,6 @@ The document is open and can be edited in **Preview**.
 <br>
 
 #### See also:
-### [1. Scripting Service](2.ScriptingService.md)
-### [5. Create Documentation](5.Documentation.md)
+### [1. Data Structures](1.DataStructures.md)
+### [2. Scripting Service](2.ScriptingService.md)
+
